Fix a bug on IE where padding on input meant text was hidden
# Removing the padding makes the box too small, so instead of padding just
# use an actual height set to be the same overall height as it was.

--- a/scss/_group-management.scss
+++ b/scss/_group-management.scss
@@ -180,8 +180,7 @@
 	input {
 		margin: 0px 0px 0px 0px !important;
 		font-size: 1.05rem;
-		padding-top: 1.3rem;
-		padding-bottom: 1.3rem;
+		height: 2.75rem;
 	}
 	.input-group {
 		margin-top: 15px;
